# agora

./: CONTRIBUTING.md  LICENSE  Makefile  README.md
backend/: .env  .env.example  main.py  pyproject.toml
backend/agent/: base.py  planner.py  registry.py  runtime.py
backend/agora/: models.py  stream.py
backend/arbitration/: manager.py
backend/epoch/: manager.py
backend/llm/: base.py  claude.py  mock.py
backend/tasks/: decomposer.py  queue.py
backend/tests/: test_task_queue.py
doc/: AGORA-存在必要性.md  AGORA-设计.md  design.md  developer-guide.md  why-agora.md  开发者指南.md
examples/: README.md  demo_agent.mjs  demo_agent.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentPanel.tsx  ArbitrationPanel.tsx  GoalForm.tsx  MessageLog.tsx  MessageRow.tsx
frontend/src/hooks/: useAgora.ts
scripts/: cc_worker.py  demo.py
sdk/nodejs/: README.md  agora_sdk.mjs
sdk/python/: README.md  agora_sdk.py
